--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
             <div class="text_button_container">
 
-                <div class="name_container"><h1>Kyaw Thet Paing</h1></div>
+                <div class="name_container"><h1>"Hello World"</h1></div>
 
                 <div class="about_container">
                     <h2 id="good_morning"></h2>
-                    <p>This is Kyaw Thet Paing. I'm practicing Programming such as Data Science, Unity Game Development, Web Development and etc...blah...blah...</p>
+                    <p>This is Kyaw Thet Paing. I'm practicing Computer Science such as Data Science, Software Development, Website Development and etc...blah...blah...</p>
                 </div>
 
                 <div class="button_explore_about">
